Fix issue where search box is not centred vertically for single select without scopes

--- a/sass/chosen-ie7.scss
+++ b/sass/chosen-ie7.scss
@@ -2,7 +2,6 @@
   .chosen-scopes {
     & li {
       display: inline;
-      vertical-align: middle;
     }
   }
 }
